Fix tab spacing

--- a/sass/_dsComponent.scss
+++ b/sass/_dsComponent.scss
@@ -61,6 +61,7 @@ body {
       span {
         position: absolute;
         left: 50%;
+        top: 0;
         transform: translateX(-50%);
       }
 
